infra/k8s/overlays/prod/platform-core/monitoring-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-service-policy
  namespace: platform-core
spec:
  podSelector:
    matchLabels:
      app: monitoring-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 4007
    - from:
        - namespaceSelector:
            matchLabels:
              name: observability
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 4007
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - protocol: TCP
          port: 4008
